# web-1-2

./: .gitignore  README.md  pyproject.toml
migration/: env.py
migration/versions/: 5293955820ff_init_db.py
src/harmony_hound/adapters/database/: connection.py
src/harmony_hound/adapters/redis/: connection.py
src/harmony_hound/application/common/: dto.py  exceptions.py  utils.py
src/harmony_hound/domain/models/: __init__.py  users.py
src/harmony_hound/main/: bot.py  config.py
src/harmony_hound/presentation/telegram/keyboards/: main_keyboards.py
src/harmony_hound/presentation/telegram/middleware/: recognition_restriction_middleware.py
src/harmony_hound/presentation/telegram/routers/: help.py  recognition.py  start.py  storage.py  user.py
src/harmony_hound/presentation/telegram/services/: abstract_processing_class.py  google_drive_service.py  recognition_service.py  video_note_processing_class.py  video_processing_class.py  voice_processing_class.py
